[package]
name = "rust-bevy-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_rapier3d = "0.29"
noise = "0.9"
rand = "0.9"
bevy_fpc = "0.1.3"

# Enable optimizations for dependencies (but not for our code):
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for our code:
[profile.dev]
opt-level = 1

